# tsquared

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  drift.py  hotelling_t2.py  myt_decomposition.py  pyproject.toml  setup.cfg
benchmark/: benchmark.py  benchmark.xlsx
examples/clean_samples/: clean_samples.py
examples/hotelling_t2/: hotelling_t2.py  hotelling_t2_continual_learning.py
examples/myt_decomposition/: myt_decomposition.py
tsquared/: __init__.py  hotelling_t2.py  myt_decomposition.py  utils.py
