[metadata]
name = tsquared
version = 1.1.0
description = Hotelling's T-squared (T2) for process monitoring and MYT decomposition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cetic/tsquared
author = Nico Salamone, Paul Vanabelle
author_email = nico.salamone2411@gmail.com, paul.vanabelle@cetic.be
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6.0
install_requires =
    numpy
    pingouin
    scikit-learn
    scipy
include_package_data = True
packages = find:
